--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,4 @@
+@import "../node_modules/modern-normalize/modern-normalize.css";
 :root {
   --primary-text-color: #757575;
   --accent-color: #2196f3;
