--- a/css/styles.css
+++ b/css/styles.css
@@ -6,8 +6,6 @@
 }
 
 body {
-  width: auto;
-  max-width: 2000px;
   margin: auto;
   background-color: #ffffff;
   font-family: "Roboto", sans-serif;
@@ -16,66 +14,117 @@ body {
   color: #212121;
 }
 
-.header {
-  height: 80px;
-  border-bottom: 1px solid #ececec;
-  font-weight: 500;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
 }
-#logo {
-  padding-top: 8px;
-  color: var(--accent-color);
+html {
+  box-sizing: border-box;
+}
+*,
+*::after,
+*::before {
+  box-sizing: inherit;
+}
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+address {
+  font-style: normal;
+}
+.link {
   text-decoration: none;
+  color: inherit;
+}
+.list {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+.header {
+  margin: auto;
+  border-bottom: 1px solid #ececec;
+}
+.logo {
+  color: var(--accent-color);
   font-family: "raleway";
   font-size: 26px;
 }
+.container {
+  padding: 0 15px;
+  width: 1200px;
+  margin: 0 auto;
+}
 .header-content {
-  padding: 20px 215px 0px 215px;
   display: flex;
   justify-content: space-between;
+  align-items: baseline;
 }
-.header ul {
-  margin-left: 93px;
-  list-style: none;
+.header-item:not(:last-child) {
+  margin-right: 60px;
+}
+
+.header-ul {
+  margin-left: 97px;
   display: flex;
-  justify-content: space-between;
-  gap: 52px;
+  align-items: center;
 }
-#header-contacts {
+.header-nav {
+  display: flex;
+  align-items: center;
+}
+.header-nav-link {
+  display: block;
+  padding: 32px 0px 31px 0px;
+  font-weight: 500;
+  color: #212121;
+}
+.header-contacts {
+  display: block;
+  padding: 32px 0px 31px 0px;
+  font-weight: 500;
   color: var(--primary-text-color);
 }
-#header-contacts:hover {
+.header-contacts:hover {
   color: var(--accent-color);
-}
-.header a {
-  text-decoration: none;
-  color: #212121;
 }
 .header a:hover {
   color: var(--accent-color);
 }
-#header-active-link {
+.header-active-link {
+  display: block;
+  padding: 32px 0px 31px 0px;
+  font-weight: 500;
   color: var(--accent-color);
+  text-decoration: none;
 }
 
 .section {
-  padding-top: 94px;
+  padding: 94px 0;
 }
-
+.section-no-top-padding {
+  padding-top: 0;
+}
 .headers {
   font-size: 36px;
   font-weight: 700;
   color: #212121;
   line-height: 42.19px;
 }
-
-.entry-section {
-  height: 600px;
+.hero-section {
+  padding: 200px 0;
   background-color: #2f303a;
   text-align: center;
 }
-.entry-section h1 {
+.hero-section-h1 {
   margin: auto;
-  padding-top: 200px;
   color: #ffffff;
   font-weight: 900;
   font-size: 44px;
@@ -85,10 +134,9 @@ body {
   font-weight: 700;
   margin-top: 40px;
   background-color: var(--accent-color);
-  border: 0;
+  border: 4px solid var(--accent-color);
   border-radius: 4px;
-  padding: 0px 24px 0px 24px;
-  height: 50px;
+  padding: 15px 24px;
   font-size: 16px;
   color: #ffffff;
   transition-duration: 0.4s;
@@ -99,101 +147,85 @@ body {
   color: #000000;
   cursor: pointer;
 }
-
-.features {
-  line-height: 24px;
-  font-size: 14px;
-}
-.features h3 {
+.features-headers {
   font-weight: 700;
   line-height: 16.41px;
 }
 .features-list {
-  padding: 0px;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   gap: 30px;
-  list-style: none;
 }
-.features li {
+.features-list-item {
+  line-height: 24px;
+  font-size: 14px;
   width: 270px;
 }
-.features p {
+.features-text {
+  padding-top: 9px;
   color: var(--primary-text-color);
 }
 
 .whatWeDo {
   text-align: center;
 }
-.whatWeDo img {
-  width: 370px;
-}
-.whatWeDo ul {
-  padding: 0px;
-  list-style: none;
+.whatWeDo-list {
+  padding-top: 50px;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   gap: 30px;
 }
 
-.team {
+.section-team {
   background-color: #f5f4fa;
-  padding: 94px 0px 94px 0px;
+  padding: 94px 0 94px 0;
   text-align: center;
 }
-.team ul {
-  padding: 0px;
+.team-list {
+  padding-top: 50px;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   gap: 30px;
-  list-style: none;
 }
-.team li {
-  width: 270px;
-  height: 368px;
+.team-list-item {
+  padding-bottom: 30px;
   background-color: #ffffff;
   border-radius: 0px 0px 4px 4px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
 }
-.team h3 {
+.team-member-image {
+  margin-bottom: 30px;
+}
+.team-member-name {
   font-size: 16px;
   font-weight: 500;
   line-height: 18.75px;
+  margin-bottom: 10px;
 }
-.team p {
+.team-member-text {
   color: var(--primary-text-color);
   font-size: 16px;
   font-weight: 400;
   line-height: 18.75px;
 }
 
-footer {
-  height: 252px;
-}
-.footer-content {
-  padding: 60px 0px 60px 215px;
+.footer {
   background-color: #2f303a;
+  padding: 60px 0;
+}
+.footer-address {
+  padding-top: 9px;
+  color: #757575;
   font-size: 14px;
   font-weight: 400;
   line-height: 24px;
 }
-.footer-content ul {
-  padding: 0px;
-  list-style: none;
-}
-.footer-content a {
-  font-style: normal;
-  text-decoration: none;
-  color: var(--primary-text-color);
-}
-.footer-content a:hover {
+.footer-address a:hover {
   color: #ffffff;
 }
 
-.filter-buttons-container {
-  margin: auto;
-  width: 611px;
+.filter-buttons-list {
   display: flex;
   justify-content: center;
   gap: 8px;
@@ -201,7 +233,7 @@ footer {
 .filter-button {
   background-color: #f5f4fa;
   height: 38px;
-  padding: 0px 24px;
+  padding: 0px 26px;
   border-radius: 4px;
   border: 0px;
   text-align: center;
@@ -222,7 +254,7 @@ footer {
   background-color: var(--accent-color);
   color: #ffffff;
   height: 38px;
-  padding: 0px 12px;
+  padding: 0px 26px;
   border-radius: 4px;
   border: 0px;
   text-align: center;
@@ -233,12 +265,10 @@ footer {
   cursor: pointer;
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
-  flex-grow: 1;
 }
 
-.cards {
-  letter-spacing: 0.06em;
-  padding: 0px;
+.cards-list {
+  margin-top: 34px;
   list-style: none;
   display: flex;
   flex-direction: row;
@@ -246,26 +276,20 @@ footer {
   gap: 30px;
   flex-wrap: wrap;
 }
-.cards li {
-  width: 370px;
-  height: 414px;
-  border: 1px solid #eeeeee;
-}
-
 .card-description {
-  padding: 0px 24px;
+  border: 1px solid #eeeeee;
+  border-top: none;
+  padding: 20px 24px;
 }
 .card-description-name {
+  letter-spacing: 0.06em;
   font-size: 18px;
   font-weight: 700;
   line-height: 36px;
 }
 .card-description-text {
+  letter-spacing: 0.06em;
   font-size: 16px;
   line-height: 30px;
   color: var(--primary-text-color);
-}
-
-.cards-container {
-  padding: 34px 0px 94px 0px;
 }
